tests/fixtures/error/error-unknown.js
module.exports = {
	"error": "Unknown",
	"message": "Unknown Error"
}
